# node-bbs-signatures

./: .eslintrc.js  .gitignore  .prettierrc.json  CHANGELOG.md  README.md  jest.config.js  package.json  test.js  tester.js  tsconfig.json  tslint.json
.github/: pull_request_template.md
.github/workflows/: any-pr.yml  github_backup.yaml  github_clone_assurance.yaml  push-binary-dispatch.yml  push-master.yml  push-release.yml
__tests__/: bbsSignature.spec.ts  bls12381.spec.ts  bls12381ToBbs.spec.ts  mnemonic.spec.ts
__tests__/bbsSignature/: createProof.bbsSignature.spec.ts  sign.bbsSignature.spec.ts  verify.bbsSignature.spec.ts  verifyProof.bbsSignature.spec.ts
__tests__/utilities/: index.ts
bench/: helper.ts  index.ts  stress.ts
docs/: ALGORITHM.md  CONTRIBUTING  RELEASE.md  index.html
docs/api/: globals.html  index.html
lib/: index.js
native/: Cargo.toml  artifacts.json  build.rs
native/src/: lib.rs  macros.rs
native/tests/: vectors.rs
sample/: README.md  package.json
sample/src/: index.ts
scripts/: add_stable_install_script.js  add_unstable_install_script.js  publish_binary.sh  publish_ts.sh  publish_unstable_binary.sh  publish_unstable_ts.sh
src/: bbsPublicKey.ts  bbsSignature.ts  bls12381.ts  bls12381toBbs.ts  index.ts
src/mnemonic/: mnemonic.ts
src/types/: BbsBlindSignContextRequest.ts  BbsBlindSignRequest.ts  BbsCreateProofRequest.ts  BbsKeyPair.ts  BbsSignRequest.ts  BbsVerifyProofRequest.ts  BbsVerifyRequest.ts  Bls12381ToBbsRequest.ts  BlsKeyPair.ts  BlsToBbsRequest.ts  index.ts
test_vectors/: helper.ts  index.ts
(+40 files in other folders)
