[package]
name = "node-bbs-signatures"
description = "A node wrapper for bbs-signatures"
build = "build.rs"
edition = "2018"
version = "0.1.0"

[lib]
name = "node_bbs_signatures"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4"

[dependencies]
arrayref = "0.3"
bbs = "0.4"
neon = "0.4"

[dev-dependencies]
base64 = "0.12"