[package]
name = "node-bbs-signatures"
description = "A node wrapper for bbs-signatures"
build = "build.rs"
edition = "2018"
version = "0.1.0"

[lib]
name = "node_bbs_signatures"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8"

[dependencies]
arrayref = "0.3"
bbs = "0.4.1"
bls_sigs_ref = "0.3"
ff-zeroize = "0.6"
hkdf = "0.8"
neon = "0.8"
pairing-plus = "0.19"
rand = "0.7"
sha2 = "0.8"

[dev-dependencies]
base64 = "0.12"
