[package]
name = "node-bbs-signatures"
description = "A node wrapper for bbs-signatures"
edition = "2018"
version = "0.1.0"

[lib]
name = "node_bbs_signatures"
crate-type = ["cdylib"]

[dependencies]
arrayref = "0.3"
bbs = { version = "0.4.1", default-features = false }
bls_sigs_ref = "0.3"
ff-zeroize = "0.6"
hkdf = "0.8"
neon = "1.0.0"
pairing-plus = "0.19"
rand = "0.7"
sha2 = "0.8"

[dev-dependencies]
base64 = "0.12"
